fix: ajustando documentacao Swagger
